[bumpversion]
current_version = 0.2.0-alpha
files = setup.cfg VERSION livesplit_cy/__init__.py
parse = 
	^v?(?P<major>0|[1-9]\d*)              # Major }
	\.(?P<minor>0|[1-9]\d*)               # Minor } No leading zeroes allowed
	\.(?P<patch>0|[1-9]\d*)               # Patch }
	(-(?P<prerelease>a|b|alpha|beta|rc)   # Prerelease identifier
	(\.)?(?P<prenum>0|[1-9]\d*)?          # Dot separator is optional...
	(?(6)(?(prenum)|^)))?                 # ...unless prenum is missing
	(\+(-|[^\W_])+)?$                     # Allow arbitrary build metadata
serialize = 
	{major}.{minor}.{patch}-{prerelease}.{prenum}
	{major}.{minor}.{patch}-{prerelease}
	{major}.{minor}.{patch}

[metadata]
name = livesplit-cy
version = attr: livesplit_cy.__version__
description = Optimized Cython bindings for the speedrun timer library livesplit-core
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntyMew/livesplit-cy
author = AntyMew
author_email = antymew@gmail.com
license = LGPL-3.0
license_file = LICENSE-LGPL.md
keywords = timer, gaming, speedrunning
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
setup_requires = 
	setuptools>=38.6.0

[flake8]
filename = *.py, *.pyx, *.px*
exclude = .eggs, *.egg, build
ignore = E225, E226, E227, E999

[bumpversion:part:prerelease]
first_value = _
optional_value = _
values = 
	_
	alpha
	beta
	rc

